// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles() should pass 1`] = `
Object {
  "color": "blue",
}
`;

exports[`styles() should too pass 1`] = `
Object {
  "marginBottom": 1,
  "marginLeft": 1,
  "marginRight": 1,
  "marginTop": 1,
}
`;

exports[`styles() should too pass 2 1`] = `
Object {
  "marginBottom": 1,
  "marginLeft": 1,
  "marginRight": 1,
  "marginTop": 1,
}
`;

exports[`styles() should too pass 3 1`] = `
Object {
  "color": "blue",
  "margin": "1px",
}
`;

exports[`styles.cls() should pass 1`] = `
Object {
  "color": "red",
}
`;

exports[`styles.one() should also pass 1`] = `
Object {
  "color": "blue",
}
`;

exports[`styles.one() should pass 1`] = `
Object {
  "color": "red",
}
`;
